src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

:root {
	--accent: #8A4B38;
	--accent-dark: #623628;
	--black: #0f1219;
	--gray: #331C15;
	--shadow: 60,60,85;
	--shadow-gray-light: 150,150,150;
	--gray-dark: #3c3c54;
	--gray-gradient: rgba(var(--shadow-gray-light), 10%), #fff;
	--box-shadow:
		0 2px 6px rgba(var(--shadow), 25%), 0 8px 24px rgba(var(--shadow), 33%), 0 16px 32px
		rgba(var(--shadow), 33%);
}
@font-face {
	/* font-family: "Atkinson"; */
	/* src: url(`${BASE}fonts/atkinson-regular.woff`) format("woff"); */
	font-family: "myFont";
	src: url('/CoffeeRoamer/fonts/SpecialElite-Regular.ttf') format('truetype');
	font-weight: 300;
	font-style: normal;
	font-display: swap;
}
@font-face {
	font-family: "myFontBold";
	/* src: url("fonts/atkinson-bold.woff") format("woff"); */
	src: url('/CoffeeRoamer/fonts/SpecialElite-Regular.ttf') format('truetype');
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}
body {
	font-family: "myFont";
	margin: 0;
	padding: 0;
	text-align: left;
	background: linear-gradient(var(--gray-gradient)) no-repeat;
	background-size: 100% 600px;
	/* word-wrap: break-word; */
	overflow-wrap: break-word;
	color: var(--gray-dark);
	font-size: 20px;
	line-height: 1.7;
}
main {
	max-width: calc(100% - 2em);
	margin: auto;
	padding: 1em 1em;
}

maparea {
	max-width: 95vw;
	padding: .5em .5em;
	display: grid;
	grid-template-columns: minmax(min-content, 25%) auto;
	grid-template-rows: auto auto;
}

.mapfilters{
	display : grid;
	grid-auto-flow: column;
	padding: 0.3em 0;
	justify-content: start;
	gap: 0.25rem;
	grid-template-rows: auto;
	overflow-x: scroll;
	scrollbar-width: none;
	scroll-behavior:smooth;
	align-items: center;
}

.mapfilters div{
	border: 1px solid black;
	width: fit-content;
	padding: 0em 1em;
	text-align: center;
	border-radius: 8px;
}


.buttons{
	display: flex;
	border-width: 0;
	border-radius: 8px;
	align-items: center;
	font-family: inherit;
	font-size: inherit;
	background-color: inherit;
}

.buttons:hover{
	box-shadow: 
	0 0 4px rgba(var(--shadow), 25%), 0 0 8px rgba(var(--shadow), 33%), 0 0 15px
	rgba(var(--shadow), 33%);
}

.buttons:active {
	box-shadow: none;
}

.stargrid {
	display: grid;
	grid-template-columns: auto auto;
	/* grid-template-rows: auto; */
	width: fit-content;
	align-items: center;
	margin: 0 auto;
}
.stargrid div{
	/* padding: 10%; */
	margin: 0.1em 0.5em;
	text-align: center;
	/* border: 1px solid black; */

}

.blogsplitscreen{
	display: grid;
	grid-template-columns: auto 30%;
	align-items: top;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	padding: 0.2em 0;
	margin: 0.20em 0;
	line-height: 1.2;
	color: var(--gray);
}
h1 {
	font-size: 2.75em;
}
h2 {
	font-size: 1.5em;
}
h3 {
	font-size: 1em;
}
h4 {
	font-size: 1em;
}
h5 {
	font-size: .75em;
	font-style: italic;
}
h6 {
	font-size: 0.5em;
	font-style: italic;
}
strong,
b {
	font-weight: 700;
}
a {
	color: var(--accent);
}
a:hover {
	color: var(--accent);
}
p {
	font-size: 1em;
	padding: 0.05em 0;
	margin: 0.20em 0;
}
.prose p {
	margin-bottom: 2em;
}
ul{
	font-size: 0.75em;
	margin-bottom: 1em;
}
ol{
	font-size: 0.75em;
	margin-bottom: 1em;
}
textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
	border-radius: 8px;
}
code {
	padding: 2px 5px;
	background-color: var(--gray-light);
	border-radius: 2px;
}
pre {
	padding: 1.5em;
	border-radius: 8px;
}
pre > code {
	all: unset;
}
blockquote {
	border-left: 4px solid var(--accent);
	padding: 0 0 0 20px;
	margin: 0;
	font-size: 1.333em;
}
hr {
	border: none;
	border-top: 1px solid var(--gray-light);
}
@media (max-width: 760px) {
	body {
		font-size: 18px;
	}
	main {
		padding: 1em;
	}
}

.stars {
    position: relative;
    display:inline-block;
    font-size: 20pt;
	height: 1em;
    line-height: 1em;
	white-space: nowrap;
}

.stars:before {	
    content: "\2606\2606\2606\2606\2606";
}

.stars:after {	
    content: "\2605\2605\2605\2605\2605";
    position:absolute;
    left:0;
    overflow:hidden;
    width:var(--w,50%);
    color: rgb(255, 200, 0);
    z-index:-1;
}

.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}

